<resources>
    <string name="app_name">Project</string>
    <string name="punto" />
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_suma">+</string>
    <string name="_resta">-</string>
    <string name="_mul">x</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_pow">^</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_igual">=</string>
    <string name="pi">PI</string>
    <string name="ans">ans</string>
    <string name="_punto">.</string>
</resources>
