<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.alejandro.project.Frag_Mem">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        tools:ignore="UselessParent">

        <TextView
            android:background="@drawable/rounded_corner"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/id_mostrar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            tools:ignore="TextViewEdits" />

        <TextView
            android:background="@drawable/rounded_corner"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/id_result"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            tools:ignore="TextViewEdits"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_mostrar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/ans"
                    android:id="@+id/id_btans"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:id="@+id/id_btnpi"
                    android:layout_width="wrap_content"
                    android:text="@string/pi"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_pow"
                    android:id="@+id/id_btpow"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    tools:ignore="ButtonStyle" />

                <Button

                    android:id="@+id/id_btdel"
                    android:layout_width="wrap_content"
                    android:background="@drawable/ic_backspace_black_24dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf">

                <Button
                    android:background="@drawable/btn_style"
                    android:text="1"
                    android:layout_height="80dp"
                    android:id="@+id/id_btn1"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle,HardcodedText"
                    android:layout_weight="1" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_2"
                    android:layout_height="80dp"
                    android:id="@+id/id_btn2"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_3"
                    android:id="@+id/id_btn3"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle"
                    android:layout_height="80dp" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_mul"
                    android:layout_height="80dp"
                    android:id="@+id/id_btnmul"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf">

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_4"
                    android:layout_height="80dp"
                    android:id="@+id/id_btn4"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:layout_height="80dp"
                    android:id="@+id/id_btn5"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/_5"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_6"
                    android:layout_height="match_parent"
                    android:id="@+id/id_btn6"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="/"
                    android:layout_height="match_parent"
                    android:id="@+id/id_btndiv"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle,HardcodedText"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="InefficientWeight">

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_7"
                    android:layout_height="80dp"
                    android:id="@+id/id_btn7"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle,NestedWeights" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_8"
                    android:layout_height="80dp"
                    android:id="@+id/id_btn8"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_9"
                    android:layout_height="80dp"
                    android:id="@+id/id_btn9"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_suma"
                    android:layout_height="80dp"
                    android:id="@+id/id_btnsum"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_punto"
                    android:layout_height="80dp"
                    android:id="@+id/id_btpunto"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_0"
                    android:layout_height="match_parent"
                    android:id="@+id/id_btn0"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_igual"
                    android:layout_height="match_parent"
                    android:id="@+id/id_btnigual"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:background="@drawable/btn_style"
                    android:text="@string/_resta"
                    android:layout_height="match_parent"
                    android:id="@+id/id_btnres"
                    android:layout_width="wrap_content"
                    android:textSize="30sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
